kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banka-4-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: banka-4-prod
