kubernetes/banka-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banka-service
  namespace: banka-4-dev
  labels:
    service: banka-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: banka-service
  template:
    metadata:
      labels:
        service: banka-service
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-4/banka-service:latest
        imagePullPolicy: Always
        name: banka-service
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: banka-service
  namespace: banka-4-dev
spec:
  selector:
    service: banka-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
