kubernetes/berza-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berza-servis
  namespace: banka-4-dev
  labels:
    service: berza-servis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: berza-servis
  template:
    metadata:
      labels:
        service: berza-servis
    spec:
      containers:
      - image: harbor.k8s.elab.rs/banka-4/berza-servis:latest
        imagePullPolicy: Always
        name: berza-servis
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2
            memory: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: berza-servis
  namespace: banka-4-dev
spec:
  selector:
    service: berza-servis
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
