kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-4-ingress-frontend
  namespace: banka-4-dev
spec:
  ingressClassName: nginx
  rules:
  - host: "banka-4-dev.si.raf.edu.rs"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-4-ingress-api
  namespace: banka-4-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: "banka-4-dev.si.raf.edu.rs"
    http:
      paths:
        - pathType: ImplementationSpecific
          path: "/user-service(/|$)(.*)"
          backend:
            service:
              name: user-service
              port:
                number: 8080
        - pathType: ImplementationSpecific
          path: "/banka-service(/|$)(.*)"
          backend:
            service:
              name: banka-service
              port:
                number: 8082
        - pathType: ImplementationSpecific
          path: "/berza-service(/|$)(.*)"
          backend:
            service:
              name: berza-servis
              port:
                number: 8081
